# investment_platform-logging

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  GIT_INSTALLATION.md  LICENSE  OPTIMIZATIONS.md  README.md
cpp/: CMakeLists.txt  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.txt  Makefile.simple  QUICK_START.md  README.md  SUMMARY.md  conanfile.txt  simple_test.cpp
cpp/cmake/: agora_log-config.cmake.in
cpp/include/agora/log/: config.hpp  context.hpp  entry.hpp  formatter.hpp  level.hpp  logger.hpp  timer.hpp
cpp/include/agora/log/handlers/: buffered_file.hpp  console.hpp  file.hpp  handler.hpp  rotating_file.hpp
cpp/src/: config.cpp  context.cpp  formatter.cpp  logger.cpp  timer.cpp
cpp/src/handlers/: buffered_file.cpp  console.cpp  file.cpp  rotating_file.cpp
cpp/tests/: CMakeLists.txt  TEST_IMPLEMENTATION_GUIDE.md  test_config.cpp  test_formatter.cpp  test_handlers.cpp  test_logger.cpp  test_rotation.cpp
docs/: DESIGN.md  INSTALLATION.md  USE_CASES.md
examples/cpp-grpc/: README.md
examples/nodejs-nestjs/: README.md
examples/python-fastapi/: README.md
js/: IMPLEMENTATION.md  README.md  TESTING_QUICKSTART.md  TEST_SUMMARY.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/examples/: README.md  basic-usage.ts  express-usage.ts
js/src/: browser.ts  config.ts  entry.ts  formatter.ts  index.ts  level.ts  logger.ts  source-location.ts
js/src/handlers/: console.ts  file.ts  handler.ts  index.ts  rotating.ts
js/src/integrations/: express.ts  index.ts
js/tests/: README.md  config.test.ts  express.test.ts  formatter.test.ts  handlers.test.ts  logger.test.ts  rotation.test.ts  source-location.test.ts
python/: IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TESTING.md  pyproject.toml  pytest.ini  test_runner.py
python/examples/: basic_usage.py  fastapi_example.py
python/src/agora_log/: __init__.py  config.py  formatter.py  level.py  logger.py
python/src/agora_log/handlers/: __init__.py  async_handler.py  base.py  console.py  file.py  rotating.py
python/src/agora_log/integrations/: fastapi.py
python/tests/: README.md  TEST_SUMMARY.md  conftest.py  test_async_handler.py  test_config.py  test_context.py  test_formatter.py  test_handlers.py  test_integrations_fastapi.py  test_logger.py  test_source_location.py
