[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agora-log"
version = "0.1.0"
description = "Unified logging library for Agora Trading Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Agora Team", email = "team@agora.example.com" }
]
keywords = ["logging", "agora", "trading", "structured-logging", "json-logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]
dependencies = [
    "orjson>=3.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
opentelemetry = ["opentelemetry-api>=1.20.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://github.com/agora/investment_platform-logging"
Repository = "https://github.com/agora/investment_platform-logging"

[tool.hatch.build.targets.wheel]
packages = ["src/agora_log"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
